# ghoAepp

./: .travis.yml  CMakeLists.txt  README.md  qml.qrc
src/: CMakeLists.txt  GHOApp.cpp  GHOApp.h  VertPlanItem.cpp  VertPlanItem.h  VertPlanModel.cpp  VertPlanModel.h  main.cpp
src/qml/: GlobalDrawer.qml  TestsPage.qml  VertretungsplanPage.qml  main.qml
utils/: travis-build.sh  travis-dependencies.sh
